--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- index.html -->
 <!doctype html>
-<html lang="en" dir="ltr" class="no-js">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
@@ -27,22 +27,9 @@
   <meta name="twitter:image" content="https://www.elifeldemir.com/logo.svg">
 
   <!-- Security: Restrictive CSP for static site
-    - Baseline per hard rules; JSON-LD allowed via nonce.
-    - Microsoft Forms embed explicitly allowed in frame-src when present.
-    Note: frame-ancestors is ignored in meta CSP, so it is omitted to avoid console warnings. -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; object-src 'none'; img-src 'self' data:; font-src 'self'; script-src 'self' 'nonce-EDm9b6V4lq'; style-src 'self'; connect-src 'self'; form-action 'self' mailto:; frame-src 'none'">
-
-  <!-- Local dev helper: if page is opened over HTTPS on localhost, redirect to HTTP
-       to avoid SSL errors (since common local servers are HTTP-only). Allowed via CSP nonce. -->
-  <script nonce="EDm9b6V4lq">
-    (function(){
-      var h = location.hostname;
-      if (location.protocol === 'https:' && (h === 'localhost' || h === '127.0.0.1')) {
-        var target = 'http://' + location.host + location.pathname + location.search + location.hash;
-        location.replace(target);
-      }
-    })();
-  </script>
+       - Baseline per hard rules; JSON-LD allowed via nonce.
+       - Microsoft Forms embed explicitly allowed in frame-src when present. -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; base-uri 'self'; frame-ancestors 'none'; object-src 'none'; upgrade-insecure-requests; img-src 'self' data:; font-src 'self'; script-src 'self' 'nonce-EDm9b6V4lq'; style-src 'self'; connect-src 'self'; form-action 'self' mailto:; frame-src 'self' https://forms.office.com">
 
   <!-- Structured data: JSON-LD Person (script allowed via nonce in CSP) -->
   <script type="application/ld+json" nonce="EDm9b6V4lq">
@@ -78,8 +65,8 @@
   }
   </script>
 
-  <link rel="icon" href="favicon.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="/styles.css">
   <!-- Performance: tiny site, one CSS file; no external fonts or libraries.
        SRI: Not required since no cross-origin assets are used. -->
 </head>
@@ -89,8 +76,8 @@
 
   <header class="site-header" role="banner">
     <div class="container nav-wrap">
-  <a class="brand" href="index.html" aria-label="Homepage">
-        <img src="logo.svg" alt="" width="28" height="28" aria-hidden="true">
+      <a class="brand" href="/" aria-label="Homepage">
+        <img src="/logo.svg" alt="" width="28" height="28" aria-hidden="true">
         <span class="brand-text">Elif Eldemir, SMMM</span>
       </a>
 
@@ -100,6 +87,7 @@
 
       <nav id="site-nav" class="site-nav" aria-label="Primary">
         <ul class="nav-list" id="nav-menu">
+          <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -109,9 +97,28 @@
   </header>
 
   <main id="main" tabindex="-1">
+    <!-- Home / Hero -->
+    <section id="home" class="section hero" aria-label="Home">
+      <div class="container">
+        <h1>Beyond price and quality: compete with credibility.</h1>
+        <p class="hero-tagline">
+          Integrated Reporting (multi-capital, value creation over time), OECD-aligned governance, and human-rights due diligence turn Turkish operations into reliable, investable supply for buyers in the Netherlands and across the EU.
+        </p>
+        <ul class="hero-bullets" role="list">
+          <li><strong>Data you can trust</strong> — decision-useful metrics, not marketing.</li>
+          <li><strong>Responsible by design</strong> — risk-based due diligence across the chain.</li>
+          <li><strong>Market-ready</strong> — transparency and board oversight that buyers expect.</li>
+        </ul>
+        <div class="hero-ctas">
+          <a class="button" href="#services">Explore Services</a>
+          <a class="button button--ghost" href="mailto:elifeeldemir@gmail.com?subject=Consultation%20Request&body=Hello%20Elif%2C%0A%0A">Contact Elif</a>
+        </div>
+      </div>
+    </section>
+
     <section id="about" class="section section--about" aria-labelledby="about-heading">
       <div class="container">
-        <h1 id="about-heading">Elif Eldemir, SMMM (CPA-equivalent in Türkiye)</h1>
+        <h2 id="about-heading">Elif Eldemir, SMMM (CPA-equivalent in Türkiye)</h2>
         <p class="lead">
           President – <strong>TESMER</strong> (Bursa SMMMO Training &amp; Internship Centre); President – <strong>Young Board</strong> (Bursa SMMMO). M.Sc. in <strong>Integrated Reporting</strong>—thesis &amp; publications at <a href="https://www.elifeldemir.com/" rel="canonical">www.elifeldemir.com</a>.
         </p>
@@ -205,13 +212,41 @@
           <p>
             <a class="button" href="mailto:elifeeldemir@gmail.com?subject=Consultation%20Request%20%E2%80%93%20Website&amp;body=Hello%20Ms.%20Eldemir%2C%0A%0AI%20would%20like%20to%20request%20a%20consultation.%20Here%20are%20the%20details%3A%0A%E2%80%A2%20Company%3A%0A%E2%80%A2%20Topic%3A%0A%E2%80%A2%20Time%20zone%3A%0A%0AThank%20you.">Request a consultation</a>
           </p>
-          <!-- Secondary CTAs: keep LinkedIn only -->
+          <!-- Secondary CTAs: accessible, keyboard-focusable buttons -->
           <p>
+            <a class="button" href="mailto:elifeeldemir@gmail.com" aria-label="Email Elif Eldemir">Email Elif</a>
+            <span aria-hidden="true"> </span>
             <a class="button" href="https://www.linkedin.com/in/REPLACE_ME" target="_blank" rel="noopener" aria-label="Connect on LinkedIn (opens in a new tab)">Connect on LinkedIn</a>
           </p>
         </div>
 
-        
+        <!-- Collapsible Microsoft Forms embed; mailto fallback remains visible below -->
+        <section class="collapsible" aria-labelledby="forms-toggle">
+          <h3>
+            <button id="forms-toggle"
+                    type="button"
+                    class="button"
+                    aria-expanded="false"
+                    aria-controls="forms-panel">
+              Contact Form (Microsoft Forms)
+            </button>
+          </h3>
+          <div id="forms-panel"
+               role="region"
+               aria-labelledby="forms-toggle"
+               hidden>
+            <p>If the embedded form does not load, please use the email form below.</p>
+            <iframe
+              title="Microsoft Forms — Contact request"
+              src="https://forms.office.com/r/REPLACE_ME"
+              loading="lazy"
+              width="100%"
+              height="900"
+              referrerpolicy="no-referrer"
+              sandbox="allow-forms allow-scripts allow-same-origin">
+            </iframe>
+          </div>
+        </section>
 
         <!-- Email-based fallback form (mailto) remains available -->
         <form id="contact-form"
@@ -254,11 +289,11 @@
       <small>
         © <span id="year"></span> Elif Eldemir. All rights reserved.
         <span aria-hidden="true"> · </span>
-  <a href="#" aria-label="Privacy notice (placeholder link)">Privacy notice</a>
+        <a href="#" aria-label="Privacy notice (placeholder link)">Privacy notice</a>
       </small>
     </div>
   </footer>
 
-  <script src="script.js" defer></script>
+  <script src="/script.js" defer></script>
 </body>
 </html>
