--- a/index.html
+++ b/index.html
@@ -100,9 +100,15 @@
     <!-- Home / Hero -->
     <section id="home" class="section hero" aria-label="Home">
       <div class="container">
-        <h1>Beyond price and quality: compete with credibility.</h1>
+        <h1>Beyond price and quality:</h1>
+        <h1>Compete with credibility.</h1>
         <p class="hero-tagline">
-          Integrated Reporting (multi-capital, value creation over time), OECD-aligned governance, and human-rights due diligence turn Turkish operations into reliable, investable supply for buyers in the Netherlands and across the EU.
+          Integrated Reporting = multi-capital, value creation over time. 
+        </p>
+        <p class="hero-tagline">
+          OECD-aligned governance, and human-rights due diligence turn Turkish operations into ==> 
+        <p class="hero-tagline">
+          Reliable, Investable supply for buyers in the Netherlands and across the EU.
         </p>
         <ul class="hero-bullets" role="list">
           <li><strong>Data you can trust</strong> — decision-useful metrics, not marketing.</li>
