--- a/index.html
+++ b/index.html
@@ -103,13 +103,20 @@
         <h1>Beyond price and quality:</h1>
         <h1>Compete with credibility.</h1>
         <p class="hero-tagline">
-          Integrated Reporting = multi-capital, value creation over time. 
+          Integrated Reporting means multi-capital, value creation over time. 
         </p>
+        <p></p>
+        <p></p>
         <p class="hero-tagline">
-          OECD-aligned governance, and human-rights due diligence turn Turkish operations into ==> 
-        <p class="hero-tagline">
+          OECD-aligned Governance and Human-rights due diligence  
+        </p>
+        <p></p>
+        <h3>turn Turkish operations into ==></h3>
+          <p class="hero-tagline">
           Reliable, Investable supply for buyers in the Netherlands and across the EU.
         </p>
+        <p></p>
+        <p></p>
         <ul class="hero-bullets" role="list">
           <li><strong>Data you can trust</strong> — decision-useful metrics, not marketing.</li>
           <li><strong>Responsible by design</strong> — risk-based due diligence across the chain.</li>
