--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     <!-- Home / Hero -->
     <section id="home" class="section hero" aria-label="Home">
       <div class="container">
-        <h1>Beyond price and quality:</h1>
-        <h1>Compete with credibility.</h1>
+        <h1>Beyond price and quality,</h1>
+        <h1>Compete with credibility...</h1>
         <p class="hero-tagline">
           Integrated Reporting means multi-capital, value creation over time. 
         </p>
@@ -111,7 +111,7 @@
           OECD-aligned Governance and Human-rights due diligence  
         </p>
         <p></p>
-        <h3>turn Turkish operations into ==></h3>
+        <h1>makes the Turkish Suppliers</h1>
           <p class="hero-tagline">
           Reliable, Investable supply for buyers in the Netherlands and across the EU.
         </p>
