--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </ul>
         <div class="hero-ctas">
           <a class="button" href="#services">Explore Services</a>
-          <a class="button button--ghost" href="mailto:elifeeldemir@gmail.com?subject=Consultation%20Request&body=Hello%20Elif%2C%0A%0A">Contact Elif</a>
+          <a class="button button--ghost" href="mailto:elifeeldemir@gmail.com?subject=Consultation%20Request&body=Hello%20Elif%2C%0A%0A">Contact</a>
         </div>
       </div>
     </section>
@@ -189,7 +189,7 @@
           </li>
 
           <li class="card" role="article">
-            <h3>Training &amp; Workshops (TESMER)</h3>
+            <h3>Training &amp; Workshops</h3>
             <ul class="card-points">
               <li>Practical programs for executives and teams.</li>
               <li>Tailored to Bursa/İstanbul/Gaziantep industry needs.</li>
@@ -227,40 +227,10 @@
           </p>
           <!-- Secondary CTAs: accessible, keyboard-focusable buttons -->
           <p>
-            <a class="button" href="mailto:elifeeldemir@gmail.com" aria-label="Email Elif Eldemir">Email Elif</a>
             <span aria-hidden="true"> </span>
-            <a class="button" href="https://www.linkedin.com/in/REPLACE_ME" target="_blank" rel="noopener" aria-label="Connect on LinkedIn (opens in a new tab)">Connect on LinkedIn</a>
+            <a class="button" href="https://www.linkedin.com/in/elif-eldemir-0ab7319b" target="_blank" rel="noopener" aria-label="Connect on LinkedIn (opens in a new tab)">LinkedIn</a>
           </p>
         </div>
-
-        <!-- Collapsible Microsoft Forms embed; mailto fallback remains visible below -->
-        <section class="collapsible" aria-labelledby="forms-toggle">
-          <h3>
-            <button id="forms-toggle"
-                    type="button"
-                    class="button"
-                    aria-expanded="false"
-                    aria-controls="forms-panel">
-              Contact Form (Microsoft Forms)
-            </button>
-          </h3>
-          <div id="forms-panel"
-               role="region"
-               aria-labelledby="forms-toggle"
-               hidden>
-            <p>If the embedded form does not load, please use the email form below.</p>
-            <iframe
-              title="Microsoft Forms — Contact request"
-              src="https://forms.office.com/r/REPLACE_ME"
-              loading="lazy"
-              width="100%"
-              height="900"
-              referrerpolicy="no-referrer"
-              sandbox="allow-forms allow-scripts allow-same-origin">
-            </iframe>
-          </div>
-        </section>
-
         <!-- Email-based fallback form (mailto) remains available -->
         <form id="contact-form"
               class="contact-form"
