--- a/index.html
+++ b/index.html
@@ -131,15 +131,24 @@
 
     <section id="about" class="section section--about" aria-labelledby="about-heading">
       <div class="container">
-        <h2 id="about-heading">Elif Eldemir, SMMM (CPA-equivalent in Türkiye)</h2>
+        <h2 id="about-heading">Elif Eldemir, SMMM</h2>
+        <p class="lead">
+          Serbest Muhasebeci Mali Müşavir (SMMM) which is equivalent of Registeraccountant (RA) in NL and Certified Public Accountant (CPA).
+        </p>
         <p class="lead">
           Secretary General – <strong>TESMER</strong> (Bursa SMMMO Training &amp; Internship Centre); 
         </p>
         <p class="lead">
           President – <strong>Young Board</strong> (Bursa SMMMO);
         </p>
+        <p  class="lead">
+          <strong>B.A.</strong> in <strong>Business Administration</strong> - Marmara University
+        </p>
         <p class="lead">
-          <strong>Education:</strong> M.Sc. in <strong>Financial Markets and Invesment Management</strong> — Thesis &amp; publications on <strong>Integrated Reporting</strong>.
+          <strong>M.Sc.</strong> M.Sc. in <strong>Financial Markets and Invesment Management</strong> - Marmara University
+        </p>
+        <p class="lead">
+          Thesis &amp; publications on <strong>Integrated Reporting</strong>.
         </p>
         <p>
           Ms. Eldemir is a Certified Public Accountant (SMMM) and Secretary General of TESMER, the Bursa SMMMO Training & Internship Centre. She also leads the Young Board of Bursa SMMMO, focusing on empowering the next generation of accountants.
@@ -151,7 +160,7 @@
           She helps Dutch buyers and Turkish suppliers align with <strong>OECD</strong> corporate-governance principles, the <strong>UN Guiding Principles on Business &amp; Human Rights</strong>, and <strong>Integrated Reporting</strong>—so quality, professionalism, and sustainability become competitive advantages.
         </p>
         <ul class="facts">
-          <li><strong>Mission:</strong> Build a reliable bridge for Dutch buyers and Turkish suppliers (Bursa, İstanbul, Gaziantep).</li>
+          <li><strong>Mission:</strong> Building reliable, sustainable, and transparent new bridges for Dutch / EU buyers and Turkish suppliers (Bursa, İstanbul, Gaziantep).</li>
           <li><strong>International:</strong> Various business partners located in the EU.</li>
           <li><strong>Location:</strong> Based in Osmangazi / Bursa, Türkiye.</li>
         </ul>
@@ -172,6 +181,15 @@
             </ul>
           </li>
 
+          <li class="card" role="article">
+            <h3>Intercultural Communication &amp; Mediation</h3>
+            <ul class="card-points">
+                <li>Cultural intelligence for business: understand differences, integrate diverse perspectives, and build trust.</li>
+                <li>Cross-cultural facilitation: structured dialogue and collaboration across boundaries to improve team effectiveness.</li>
+                <li>Mediation and negotiation: conflict-resolution strategies to align stakeholders and reach durable agreements.</li>
+            </ul>
+          </li>
+          
           <li class="card" role="article">
             <h3>Governance &amp; UNGP Readiness</h3>
             <ul class="card-points">
@@ -194,7 +212,7 @@
             <h3>Financial &amp; Compliance (SMMM)</h3>
             <ul class="card-points">
               <li>Accounting and financial reporting.</li>
-              <li>Coordination with Turkish regulatory requirements.</li>
+              <li>Coordination with Turkish regulatory and IFRS requirements.</li>
               <li>Risk and internal-control basics.</li>
             </ul>
           </li>
