--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <strong>B.A.</strong> in <strong>Business Administration</strong> - Marmara University
         </p>
         <p class="lead">
-          <strong>M.Sc.</strong> M.Sc. in <strong>Financial Markets and Invesment Management</strong> - Marmara University
+          <strong>M.Sc.</strong> in <strong>Financial Markets and Invesment Management</strong> - Marmara University
         </p>
         <p class="lead">
           Thesis &amp; publications on <strong>Integrated Reporting</strong>.
@@ -189,7 +189,7 @@
                 <li>Mediation and negotiation: conflict-resolution strategies to align stakeholders and reach durable agreements.</li>
             </ul>
           </li>
-          
+
           <li class="card" role="article">
             <h3>Governance &amp; UNGP Readiness</h3>
             <ul class="card-points">
